k8s-prod/ingress-service.yml
apiVersion: networking.k8s.io/v1
# UPDATE API
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    # (RELATED WITH CERTIFICATE IN PRODUCTION - START)
    # This cert-manager is used when adding the issuer and certificate to our project.
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    #  Force users to only make use of HTTPS traffic i.e. only make request to our application with https and not http
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    #(RELATED WITH CERTIFICATE IN PRODUCTION - END)
spec:
  # (RELATED WITH CERTIFICATE IN PRODUCTION - START)
  tls:
    - hosts:
        - multik8sfzekiqi.com
        - www.multik8sfzekiqi.com
      secretName: multik8sfzekiqi-com #The secret-name in the certificate.yml
  #(RELATED WITH CERTIFICATE IN PRODUCTION - END)
  rules:
    - host: multik8sfzekiqi.com
      http:
        paths:
          - path: /?(.*)
            # UPDATE PATH
            pathType: Prefix
            # ADD PATHTYPE
            backend:
              service:
                # UPDATE SERVICE FIELDS
                name: client-cluster-ip-service
                port:
                  number: 3000
          - path: /api/?(.*)
            # UPDATE PATH
            pathType: Prefix
            # ADD PATHTYPE
            backend:
              service:
                # UPDATE SERVICE FIELDS
                name: server-cluster-ip-service
                port:
                  number: 5000
    - host: www.multik8sfzekiqi.com
      http:
        paths:
          - path: /?(.*)
            # UPDATE PATH
            pathType: Prefix
            # ADD PATHTYPE
            backend:
              service:
                # UPDATE SERVICE FIELDS
                name: client-cluster-ip-service
                port:
                  number: 3000
          - path: /api/?(.*)
            # UPDATE PATH
            pathType: Prefix
            # ADD PATHTYPE
            backend:
              service:
                # UPDATE SERVICE FIELDS
                name: server-cluster-ip-service
                port:
                  number: 5000
